--- a/global.css
+++ b/global.css
@@ -13,7 +13,9 @@ body {
 
     background-image: url("public/wave_pattern.png");
     background-size: 400px;
-    background-blend-mode: color;
+    background-blend-mode: multiply;
+    background-position: center;
+    background-position-x: 100px;
 
     display: flex;
     justify-content: center;
@@ -32,7 +34,7 @@ body {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    box-shadow: inset 0 0 50px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 0 0 50px 0px rgba(0, 0, 0, 0.4);
 }
 
 #right-info {
@@ -69,6 +71,14 @@ li {
     text-align: left;
     margin-block: 5px;
     text-decoration: dashed;
+}
+
+#left-content-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
 }
 
 /*
@@ -139,4 +149,32 @@ SECTION HOME
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+
+button {
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.nav-button {
+    padding: 1rem;
+    margin-block: 10px;
+    width: 50%;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    transition: transform 75ms ease-in;
+}
+
+.nav-button:hover {
+    transform: scale(1.1);
 }
