--- a/global.css
+++ b/global.css
@@ -2,200 +2,151 @@
 GLOBAL STUFF
 */
 
+@font-face {
+    font-family: "ShinGo";
+    src: url("public/shingo_regular.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: "ShinGo";
+    src: url("public/shingo_bold.otf") format("opentype");
+    font-weight: bold;
+    font-style: normal;
+}
+
 body {
     margin: 0;
     padding: 0;
-    color: rgb(255, 255, 255);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #32084c;
+    background-color: rgb(0, 0, 0);
+    font-family: "ShinGo";
+    color: white;
     width: 100dvw;
     height: 100dvh;
 
-    background-image: url("public/wave_pattern.png");
-    background-size: 200px;
-    background-blend-mode: multiply;
-    background-position: center;
-    background-position-x: 100px;
-
+    /* Center all that shit */
     display: flex;
-    justify-content: center;
-    align-items: center;
-
-    overflow: hidden;
-
-    box-shadow: inset 0 0 50px 0px rgba(0, 0, 0, 0.4);
-}
-
-#left-info {
-    background-color: rgba(36, 36, 36, 0.4);
-    backdrop-filter: blur(3px);
-    width: 30%;
-    height: 100%;
-    display: flex;
-    justify-content: space-around;
+    justify-content: start;
     align-items: center;
     flex-direction: column;
-    text-align: center;
-    box-shadow: inset 0 0 50px 0px rgba(0, 0, 0, 0.4);
 }
 
-#right-info {
-    /* background-color: green; */
-    width: 70%;
+
+
+/*
+GENERIC GLOBAL CLASSES
+*/
+
+
+
+/*
+HEADER/WELCOME SECTION
+*/
+
+#main-app {
+    width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-direction: column;
 }
 
-h2 {
-    color: rgb(152, 152, 152);
-    margin: 0;
-    font-size: 1rem;
-}
-
-a {
-    text-transform: none;
-    text-decoration: none;
-    color: #b43cff;
-}
-
-a:visited {
-    color: #b43cff;
-}
-
-
-h3 {
-    margin: 0;
-    padding: 0;
-    text-decoration: underline;
-}
-
-li {
-    list-style: none;
-    text-align: left;
-    margin-block: 5px;
-    text-decoration: dashed;
-}
-
-ul {
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 0.2rem;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-}
-
-li > ul {
-    background: none;
-    border-radius: none;
-    box-shadow: none;
-    backdrop-filter: none;
-    -webkit-backdrop-filter: none;
-    border: none;
-}
-
-#left-content-area {
+#app-header {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
+    box-shadow:  0px 10px 30px 0px rgba(15, 15, 15, 0.662);
+    background-color: #E70012;
+    /* opacity: 1;
+    background-image:  linear-gradient(135deg, #d50113 25%, transparent 25%), linear-gradient(225deg, #d50113 25%, transparent 25%), linear-gradient(45deg, #d50113 25%, transparent 25%), linear-gradient(315deg, #d50113 25%, #E70012 25%);
+    background-position:  10px 0, 10px 0, 0 0, 0 0;
+    background-size: 20px 20px;
+    background-repeat: repeat; */
+
+    min-height: fit-content;
+    max-height: max-content;
+    z-index: 2;
 }
 
-/*
-HEADER
-*/
-
-
-
-/*
-SECTION HOME
-*/
-
-#right-info {
+#app-header-content {
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#right-main-container {
-    width: 90%;
-    height: 95%;
-    overflow-y: scroll;
-    scrollbar-color: rgba(255, 255, 255, 0.604) rgba(255, 166, 0, 0);
-    scrollbar-width: thin;
-    background-color: rgba(36, 36, 36, 0.4);
-    backdrop-filter: blur(3px);
-    border-radius: 0.75rem;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.4);
-    padding-inline: 20px;
-}
-
-.right-side-section {
-    margin: 15px;
-}
-
-.section-title {
-    text-decoration: none;
-    width: calc(90% - padding);
-    background-color: rgba(125, 27, 186, 0.4);
-    padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 500px;
-    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.451);
-    flex: 0 0 90%;
+    justify-content: space-around;
+    align-items:start;
+    flex-direction: column;
+    width: 80%;
 }
 
 
-#section-langages {
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-direction: row;
-    flex-wrap: wrap;
+#header-content-left {
+    text-align: left;
+    font-weight:bold;
+    font-size: 1.0rem;
 }
 
-.content-box {
-    width:max-content;
-    max-width: 20%;
-    height: fit-content;
-    padding: 30px;
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#header-content-left > h1 {
+    font-size: 3rem;
+    margin-bottom: 0;
+}
 
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+#header-content-left > h2 {
+    font-size: 1.3rem;
+    margin-top: 0px;
+    font-style: oblique;
+    opacity: 0.8;
+}
+
+#header-content-right {
+    text-align: justify;
+    font-size: 1.0rem;
+}
+
+@media only screen and (max-width: 600px) {
+    #app-header-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 80%;
+    }
+
+    #header-content-left {
+        text-align: center;
+        width: 100%;
+        
+    }
+    
+    #header-content-right {
+        /* height: 30%; */
+        width: 90%;
+    }
 }
 
 
-button {
-    background: none;
-	color: inherit;
-	border: none;
-	padding: 0;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+.spikes {
+    width: 100%;
+    height: 64px;
+    position: relative;
+    background: transparent;
+    background-image: url("public/tooth.png");
+    background-repeat: repeat-x;
+    z-index: 2;
+    margin-bottom: -64px;
 }
 
-.nav-button {
-    padding: 1rem;
-    margin-block: 10px;
-    width: 50%;
-    background: rgba(0, 0, 0, 0.3);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    transition: transform 75ms ease-in;
-}
 
-.nav-button:hover {
-    transform: scale(1.1);
+
+
+#app-projets {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    color: black;
+    background-color: #ffffff;
+    background: repeating-linear-gradient(-45deg, #f0f0f0, #f0f0f0 5px, #ffffff 2px, #ffffff 10px);
 }
