--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     font-family:'Courier New', Courier, monospace;
 }
 
@@ -66,16 +66,45 @@ body {
     color: rgb(183, 183, 183);
 }
 
+.clickable {
+    cursor: pointer;
+}
+
+.clickable:hover {
+    transform: scale(0.96);
+}
+
 #page-content {
     position: relative;
     z-index: 10; /* above background */
-    width: 100%;
-    height: 100%;
+    width: 100dvw;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-size: 0.99rem;
 }
+
+#page-content-grid {
+    width: 80%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+#contentBlock-aboutMe { 
+    grid-column: span 3 / span 3;
+}
+
+
+
+
+
+
 
 .blue-outline {
     border: 1px solid rgb(51, 87, 125);
@@ -131,13 +160,16 @@ body {
 
 p {
     margin: 0;
-    font-size: 1.2rem;
 }
 
 h1, h2 {
     margin: 0;
     margin-bottom: 0.1rem;
     padding: 0;
+}
+
+h2 {
+    font-size: 1.1rem;
 }
 
 #content-titleName {
@@ -205,4 +237,24 @@ h1, h2 {
   .skill-list  {
     width: 90%;
   }
+}
+
+
+.rainbow_text_animated {
+    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: rainbow_animation 1s ease-in-out infinite;
+    background-size: 400% 100%;
+}
+
+@keyframes rainbow_animation {
+    0%,100% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 100% 0;
+    }
 }
