--- a/style.css
+++ b/style.css
@@ -168,14 +168,6 @@ h2 {
     font-size: 1.1rem;
 }
 
-#content-titleName {
-    margin-top: 20px;
-    width: 30%;
-    padding: 0.75rem;
-    text-align: center;
-}
-
-
 .skill-list  {
     display: flex;
     justify-content: center;
@@ -236,28 +228,9 @@ h2 {
 /* MEDIA QUERIES */
 /*********************************************/
 
-  .rainbow_text_animated {
-    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    animation: rainbow_animation 1s ease-in-out infinite;
-    background-size: 400% 100%;
-}
-
-@keyframes rainbow_animation {
-    0%,100% {
-        background-position: 0 0;
-    }
-
-    50% {
-        background-position: 100% 0;
-    }
-}
-
 @media only screen and (max-width: 600px) {
   #content-titleName {
-    width: 85%;
+    width: 90%;
   }
 
   .skill-list  {
@@ -275,4 +248,41 @@ h2 {
   #osakaAscii {
     transform: scale(0.6);
   }
+}
+
+
+
+
+
+
+
+
+
+.rainbow_text_animated {
+    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: rainbow_animation 1s ease-in-out infinite;
+    background-size: 400% 100%;
+}
+
+
+.BnW_text_animated {
+    background: linear-gradient(to right, #fff, #000 , #fff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: rainbow_animation 4s linear infinite;
+    background-size: 400% 100%;
+}
+
+@keyframes rainbow_animation {
+    0%,100% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 100% 0;
+    }
 }
