--- a/style/main.css
+++ b/style/main.css
@@ -71,7 +71,7 @@ body {
 
 .genericContainer {
     /* backdrop-filter: blur(1.2px); */
-    background-color: rgba(39, 39, 42, 1);
+    background-color: rgb(33, 33, 33);
     padding: 1em;
     box-shadow: 0px 0px 0px 1px var(--divy-orange);
     margin: 2em;
